[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/Tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/pawn/Pawn.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Game.gd" type="Script" id=3]
[ext_resource path="res://scenes/UI.gd" type="Script" id=4]
[ext_resource path="res://assets/parallax_background/sky.png" type="Texture" id=5]
[ext_resource path="res://scenes/entities/TurnsHandler.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/music/Alexander Emenheiser - One Fun, Little Music.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/fonts/SpaceMono-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/fonts/SpaceMono-BoldItalic.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://scenes/objects/Coin.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/parallax_background/clouds_1.png" type="Texture" id=11]
[ext_resource path="res://assets/parallax_background/clouds_2.png" type="Texture" id=12]
[ext_resource path="res://assets/parallax_background/clouds_3.png" type="Texture" id=13]
[ext_resource path="res://assets/parallax_background/clouds_4.png" type="Texture" id=14]
[ext_resource path="res://scenes/Tiles.gd" type="Script" id=15]
[ext_resource path="res://scenes/objects/Star.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 44
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Tiles" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="Tile" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 32, 256 )
nameType = 3

[node name="Tile2" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 96, 256 )

[node name="Tile3" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 160, 256 )

[node name="Tile4" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 224, 256 )

[node name="Tile5" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 288, 256 )

[node name="Tile6" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 352, 256 )
nameType = 1

[node name="Tile7" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 352, 192 )

[node name="Tile8" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 352, 128 )

[node name="Tile9" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 416, 128 )

[node name="Tile10" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 480, 128 )
nameType = 2

[node name="Tile11" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 480, 192 )

[node name="Tile12" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 544, 192 )

[node name="Tile13" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 608, 192 )

[node name="Tile14" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 672, 192 )
nameType = 4

[node name="Tile15" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 672, 256 )

[node name="Tile16" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 672, 320 )
nameType = 1

[node name="Tile17" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 736, 320 )

[node name="Tile18" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 800, 320 )

[node name="Tile19" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 864, 320 )

[node name="Tile20" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 864, 256 )

[node name="Tile21" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 928, 256 )
nameType = 3

[node name="Tile22" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 992, 256 )

[node name="Tile23" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1056, 256 )
nameType = 1

[node name="Tile24" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1056, 320 )

[node name="Tile25" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1056, 384 )

[node name="Tile26" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1056, 448 )

[node name="Tile27" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1056, 512 )

[node name="Tile28" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1120, 512 )

[node name="Tile29" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1184, 512 )

[node name="Tile30" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1248, 512 )
nameType = 1

[node name="Tile31" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1248, 576 )

[node name="Tile32" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1248, 640 )

[node name="Tile33" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1248, 704 )
nameType = 3

[node name="Tile34" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1184, 704 )

[node name="Tile35" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1120, 704 )

[node name="Tile36" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 1056, 704 )

[node name="Tile37" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 992, 704 )
nameType = 1

[node name="Tile38" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 928, 704 )

[node name="Tile39" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 928, 640 )

[node name="Tile40" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 928, 576 )

[node name="Tile41" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 864, 576 )

[node name="Tile42" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 800, 576 )

[node name="Tile43" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 736, 576 )
nameType = 1

[node name="Tile44" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 736, 640 )

[node name="Tile45" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 736, 704 )

[node name="Tile46" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 672, 704 )

[node name="Tile47" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 608, 704 )

[node name="Tile48" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 608, 640 )

[node name="Tile49" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 544, 640 )

[node name="Tile50" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 480, 640 )

[node name="Tile51" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 416, 640 )
nameType = 1

[node name="Tile52" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 416, 576 )

[node name="Tile53" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 352, 576 )

[node name="Tile54" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 288, 576 )

[node name="Tile55" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 288, 640 )

[node name="Tile56" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 224, 640 )

[node name="Tile57" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 160, 640 )
nameType = 3

[node name="Tile58" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 160, 576 )

[node name="Tile59" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 160, 512 )
nameType = 1

[node name="Tile60" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 96, 512 )

[node name="Tile61" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 32, 512 )

[node name="Tile62" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 32, 448 )

[node name="Tile63" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 32, 384 )

[node name="Tile64" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 32, 320 )

[node name="TurnsHandler" parent="." instance=ExtResource( 6 )]

[node name="Pawn" parent="TurnsHandler" instance=ExtResource( 2 )]
z_index = 3
id = "Player"
type = "player"

[node name="Pawn2" parent="TurnsHandler" instance=ExtResource( 2 )]
z_index = 2
id = "AI"

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="TopMarginContainer" type="MarginContainer" parent="UI"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -79.0
margin_right = 79.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnPanelContainer" type="PanelContainer" parent="UI/TopMarginContainer"]
margin_right = 158.0
margin_bottom = 60.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI/TopMarginContainer/TurnPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 151.0
margin_bottom = 53.0
mouse_filter = 2

[node name="Turns" type="HBoxContainer" parent="UI/TopMarginContainer/TurnPanelContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnLabel" type="Label" parent="UI/TopMarginContainer/TurnPanelContainer/Panel/Turns"]
margin_top = 5.0
margin_right = 75.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "TURN:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueLabel" type="Label" parent="UI/TopMarginContainer/TurnPanelContainer/Panel/Turns"]
margin_left = 79.0
margin_top = 5.0
margin_right = 139.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0.901961, 1 )
text = "0000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -144.0
margin_right = 384.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 377.0
margin_bottom = 137.0
mouse_filter = 2

[node name="MessageLabel" type="Label" parent="UI/PanelContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Game messages"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsLabel" type="Label" parent="UI/PanelContainer/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -185.0
margin_top = -36.0
margin_right = 185.0
custom_fonts/font = SubResource( 1 )
text = "9999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" parent="UI/PanelContainer/Panel/CreditsLabel" instance=ExtResource( 10 )]
position = Vector2( 137, 17 )
scale = Vector2( 2, 2 )

[node name="StartButton" type="Button" parent="UI"]
margin_left = 832.0
margin_top = 596.0
margin_right = 1056.0
margin_bottom = 726.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.117647, 0.831373, 1 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star" parent="UI/StartButton" instance=ExtResource( 16 )]
position = Vector2( 108, -44 )
scale = Vector2( 5, 5 )
itemType = 2

[node name="RestartButton" type="Button" parent="UI"]
margin_left = 1664.0
margin_top = 928.0
margin_right = 1888.0
margin_bottom = 1058.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.117647, 0.831373, 1 )
text = "Restart"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveForward" type="Button" parent="UI"]
margin_left = 416.0
margin_top = 960.0
margin_right = 617.0
margin_bottom = 1032.0
custom_fonts/font = SubResource( 2 )
text = "Forward"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveBackward" type="Button" parent="UI"]
margin_left = 672.0
margin_top = 960.0
margin_right = 900.0
margin_bottom = 1032.0
custom_fonts/font = SubResource( 2 )
text = "Backward"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 49.75, -449.995 )
current = true
zoom = Vector2( 0.2, 0.2 )
limit_smoothed = true
smoothing_enabled = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera2D"]

[node name="Sky" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="Camera2D/ParallaxBackground/Sky"]
position = Vector2( -287.733, -163.507 )
texture = ExtResource( 5 )
centered = false

[node name="Clouds_1" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2( 0.3, 0.3 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="Camera2D/ParallaxBackground/Clouds_1"]
position = Vector2( -287.733, -163.507 )
texture = ExtResource( 11 )
centered = false

[node name="Clouds_2" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="Camera2D/ParallaxBackground/Clouds_2"]
position = Vector2( -287.733, -163.507 )
texture = ExtResource( 12 )
centered = false

[node name="Clouds_3" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2( 0.7, 0.7 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="Camera2D/ParallaxBackground/Clouds_3"]
position = Vector2( -287.733, -163.507 )
texture = ExtResource( 13 )
centered = false

[node name="Clouds_4" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="Camera2D/ParallaxBackground/Clouds_4"]
position = Vector2( -287.733, -163.507 )
texture = ExtResource( 14 )
centered = false
[connection signal="pressed" from="UI/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="UI/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="UI/MoveForward" to="." method="_on_MoveForward_pressed"]
[connection signal="pressed" from="UI/MoveBackward" to="." method="_on_MoveBackward_pressed"]
